Fixed the extra padding on the mobile version and got the image to show on the mobile version of the home page

--- a/style.css
+++ b/style.css
@@ -342,6 +342,21 @@ footer>*{
         flex-wrap: wrap;
     }
     .column-60{
+        flex: 1 1 100%;
+        min-width: 100%;
+
         margin: 1rem;
+        padding-inline: 2rem;
+    }
+    .column-40{
+        flex: 1 1 100%;
+        min-width: 100%;
+        min-height: 25rem;
+    }
+    #page1_img{
+        background-image: url(Images/Pages/Home/Side-image-mobile.jpg);
+    }
+    .info-Section{
+        padding-bottom: 1rem;
     }
 }
